k8s/shiping-receiving/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-receiving
spec:
  selector:
    app: shipping-receiving
  ports:
    - port: 8082
      name: web
