k8s/shiping-receiving/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipping-receiving
  labels:
    name: shipping-receiving
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: '/shipping-receiving'
            backend:
              service:
                name: shipping-receiving
                port:
                  number: 8082
